// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> component with a background 1`] = `
<div
  class="header__Background-djltcn-0 lglpeb"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 cKeoqP"
  >
    <p
      class="header__Link-djltcn-2 dHwxJN"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> component with a background 2`] = `
<div
  class="header__Background-djltcn-0 lglpeb"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 cKeoqP"
  >
    <p
      class="header__Link-djltcn-2 fplXiN"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> component without a background 1`] = `
<div
  class="header__Background-djltcn-0 lglpeb"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 cKeoqP"
  >
    <p
      class="header__Link-djltcn-2 fplXiN"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the full <Header /> component with a background 1`] = `
<div
  class="header__Background-djltcn-0 dUzWEZ"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-1 cKeoqP"
  >
    <div
      class="header__Group-djltcn-3 hAmgWk"
    >
      <p
        class="header__Link-djltcn-2 fplXiN"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-2 fplXiN"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-3 hAmgWk"
    >
      <div
        class="header__Search-djltcn-5 kEDhSA"
      >
        <button
          class="header__SearchIcon-djltcn-6 ivOsNR"
        >
          <img
            alt="search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-4 gZUbTh"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-10 kVuknk"
      >
        <button
          class="header__Picture-djltcn-8 ePvxNk"
          src="/images/users//images/users/1.png.png"
        />
        <div
          class="header__Dropdown-djltcn-9 fxiggt"
        >
          <div
            class="header__Group-djltcn-3 hAmgWk"
          >
            <button
              class="header__Picture-djltcn-8 ePvxNk"
              src="/images/users//images/users/1.png.png"
            />
            <p
              class="header__Link-djltcn-2 fplXiN"
            >
              darac
            </p>
          </div>
          <div
            class="header__Group-djltcn-3 hAmgWk"
          >
            <p
              class="header__Link-djltcn-2 fplXiN"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-1 header__Feature-djltcn-11 cKeoqP flTBnt"
  >
    <h2
      class="header__FeatureCallOut-djltcn-12 UDRwT"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-13 gGXzIj"
    >
      Forever alone in a crowd, failed comedian Arthur Fleck seeks connection as he walks the streets of Gotham City. Arthur wears two masks -- the one he paints for his day job as a clown, and the guise he projects in a futile attempt to feel like he's part of the world around him.
    </p>
    <button
      class="header__PlayButton-djltcn-15 SxCeS"
    >
      Play
    </button>
  </div>
</div>
`;
